--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     ]
   },
   "devDependencies": {
+    "@aws-cdk/assert": "1.138.0",
     "@tsconfig/node14": "^1.0.1",
-    "@aws-cdk/assert": "1.132.0",
     "@types/aws-lambda": "^8.10.70",
     "@types/node": "<15.0.0"
   },
   "dependencies": {
-    "@serverless-stack/cli": "0.56.2",
-    "@serverless-stack/resources": "0.56.2",
-    "@aws-cdk/core": "1.132.0"
+    "@aws-cdk/core": "1.138.0",
+    "@serverless-stack/cli": "0.57",
+    "@serverless-stack/resources": "0.57"
   }
 }
