--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -26,8 +26,5 @@ jobs:
     - name: Install dependencies
       run: yarn
 
-    - name: Build stack
-      run: yarn sst build
-
     - name: Deploy stack
-      run: yarn sst deploy -- --stage production
+      run: yarn sst deploy --stage production
