--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "sst start",
     "build": "sst build",
     "deploy": "sst deploy",
-    "remove": "sst remove"
+    "remove": "sst remove",
+    "go-test": "go test -v ./src/..."
   },
   "eslintConfig": {
     "extends": [
