feat: WIP daily summary email

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@
 # To apply them to your Lambda functions, checkout this doc - https://docs.serverless-stack.com/environment-variables#environment-variables-in-lambda-functions
 
 MY_ENV_VAR=i-am-an-environment-variable
+MAILGUN_API_KEY=
+DOMAIN=
+SENDER=
