feat: mailgun client and tests

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 
 MY_ENV_VAR=i-am-an-environment-variable
 MAILGUN_API_KEY=
-DOMAIN=
-SENDER=
+MAILGUN_DOMAIN=
+MAILGUN_SENDER=
 API_URL=
 EMAIL_RECIPIENT=
