--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@
 # To apply them to your Lambda functions, checkout this doc - https://docs.serverless-stack.com/environment-variables#environment-variables-in-lambda-functions
 
 MY_ENV_VAR=i-am-an-environment-variable
+MAILGUN_API_KEY=
+MAILGUN_DOMAIN=
+MAILGUN_SENDER=
+API_URL=
+EMAIL_RECIPIENT=
