--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -28,3 +28,11 @@ jobs:
 
     - name: Deploy stack
       run: yarn sst deploy --stage production
+      env:
+        MAILGUN_DOMAIN: mg.pocok.biz
+        MAILGUN_SENDER: apex@mg.pocok.biz
+        EMAIL_RECIPIENT: billing@apexlab.io
+        MAILGUN_API_KEY: ${{ secrets.PROD_MAILGUN_API_KEY }}
+        API_URL: ${{ secrets.PROD_API_URL }}
+        TYPLESS_TOKEN: ${{ secrets.PROD_TYPLESS_TOKEN }}
+        TYPLESS_DOC_TYPE: ${{ secrets.PROD_TYPLESS_DOC_TYPE }}
