--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -36,3 +36,4 @@ jobs:
         API_URL: ${{ secrets.PROD_API_URL }}
         TYPLESS_TOKEN: ${{ secrets.PROD_TYPLESS_TOKEN }}
         TYPLESS_DOC_TYPE: ${{ secrets.PROD_TYPLESS_DOC_TYPE }}
+        PROCESS_INVOICE_LAMBDA_TIMEOUT_SEC: 30
