--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -22,6 +22,9 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: "14"
+    - uses: actions/setup-go@v2
+      with:
+        go-version: "1.17"
 
     - name: Install dependencies
       run: yarn
