--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "sst build",
     "deploy": "sst deploy",
     "remove": "cross-env NODE_ENV=development sst remove",
-    "go-test": "go test -v ./src/...",
+    "go-test": "go test  -cover  -v ./src/...",
     "go-watch-test": "nodemon --exec 'yarn go-test'",
     "go-tidy": "go mod tidy"
   },
