feat: asset uploader

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ JWT_KEY=
 TYPLESS_TOKEN=
 TYPLESS_DOC_TYPE=
 PROCESS_INVOICE_LAMBDA_TIMEOUT_SEC=30
+
+# must be unique for every developer or environment
+AWS_ASSET_BUCKET_NAME=
