--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "test": "sst test",
-    "start": "yarn upload-assets && cross-env NODE_ENV=development sst start",
+    "start": "cross-env NODE_ENV=development sst start",
+    "prestart": "yarn upload-assets",
     "build": "sst build",
     "deploy": "sst deploy",
+    "predeploy": "yarn upload-assets",
     "remove": "cross-env NODE_ENV=development sst remove",
     "go-test": "go test -v ./src/...",
     "go-watch-test": "nodemon --watch src -e go,json --exec 'yarn go-test'",
@@ -14,7 +16,7 @@
     "amp-validate": "yarn go-amp && amphtml-validator ./src/amp/emails/*.html --html_format=AMP4EMAIL",
     "go-watch-amp": "nodemon --watch src/amp -e go --exec 'yarn amp-validate'",
     "go-tidy": "go mod tidy",
-    "upload-assets": "go run assets/uploader/asset_uploader.go"
+    "upload-assets": "go run scripts/asset_uploader/asset_uploader.go"
   },
   "eslintConfig": {
     "extends": [
