--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "remove": "cross-env NODE_ENV=development sst remove",
     "go-test": "go test -v ./src/...",
     "go-watch-test": "nodemon --watch src -e go,json --exec 'yarn go-test'",
-    "go-amp": "export $(cat .env.local | sed 's/#.*//g' | xargs) && go run ./src/amp/generate_htmls.go",
+    "go-amp": "go run ./src/amp/generate_htmls.go",
     "amp-validate": "yarn go-amp && amphtml-validator ./src/amp/emails/*.html --html_format=AMP4EMAIL",
     "go-watch-amp": "nodemon --watch src/amp/templates -e html --exec 'yarn amp-validate'",
     "go-tidy": "go mod tidy"
