fix: upload assets scripts

--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "scripts": {
     "test": "sst test",
     "start": "cross-env NODE_ENV=development sst start",
-    "prestart": "yarn upload-assets",
     "build": "sst build",
     "deploy": "sst deploy",
-    "predeploy": "yarn upload-assets",
+    "postdeploy": "yarn upload-assets",
     "destroy": "cross-env NODE_ENV=development sst remove",
     "go-test": "go test -v ./src/...",
     "go-watch-test": "nodemon --watch src -e go,json --exec 'yarn go-test'",
