--- a/.github/workflows/create_pr_env.yml
+++ b/.github/workflows/create_pr_env.yml
@@ -9,6 +9,8 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
+    - run: echo "BRANCH_NAME=${GITHUB_REF_NAME,,}" >>${GITHUB_ENV}
+
     - uses: actions/checkout@v2
 
     - name: Configure AWS Credentials
@@ -29,12 +31,12 @@ jobs:
       run: yarn
 
     - name: Deploy stack
-      run: yarn sst deploy --stage ${GITHUB_REF##*/}
+      run: yarn sst deploy --stage ${BRANCH_NAME}
       env:
-        DOMAIN_NAME: ${GITHUB_REF##*/}.pocok.biz
-        API_URL: https://${GITHUB_REF##*/}.pocok.biz
+        DOMAIN_NAME: ${BRANCH_NAME}.pocok.biz
+        API_URL: https://${BRANCH_NAME}.pocok.biz
         MAILGUN_DOMAIN: mg.pocok.biz
-        MAILGUN_SENDER: ${GITHUB_REF##*/}@mg.pocok.biz
+        MAILGUN_SENDER: ${BRANCH_NAME}@mg.pocok.biz
         EMAIL_RECIPIENT: mate.donka@apexlab.io
         MAILGUN_API_KEY: ${{ secrets.PROD_MAILGUN_API_KEY }}
         TYPLESS_TOKEN: ${{ secrets.PROD_TYPLESS_TOKEN }}
@@ -44,5 +46,5 @@ jobs:
     - name: Comment
       uses: thollander/actions-comment-pull-request@v1
       with:
-        message: 'Deployed to ${GITHUB_REF##*/}.pocok.biz'
+        message: 'Deployed to ${BRANCH_NAME}.pocok.biz'
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
