--- a/.github/workflows/create_pr_env.yml
+++ b/.github/workflows/create_pr_env.yml
@@ -9,9 +9,14 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-    - run: echo "BRANCH_NAME=${GITHUB_REF_NAME,,}" >>${GITHUB_ENV}
+    - name: Inject slug variables
+      uses: rlespinasse/github-slug-action@v4
 
-    - uses: actions/checkout@v2
+    - name: Set STAGE variable in environment for next steps
+      run: echo "STAGE=pr-${{ github.event.number }}-${{ env.GITHUB_HEAD_REF_SLUG }}" >> $GITHUB_ENV
+
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -31,12 +36,12 @@ jobs:
       run: yarn
 
     - name: Deploy stack
-      run: yarn sst deploy --stage ${BRANCH_NAME}
+      run: yarn sst deploy --stage ${STAGE}
       env:
-        DOMAIN_NAME: ${BRANCH_NAME}.pocok.biz
-        API_URL: https://${BRANCH_NAME}.pocok.biz
+        DOMAIN_NAME: ${STAGE}.pocok.biz
+        API_URL: https://${STAGE}.pocok.biz
         MAILGUN_DOMAIN: mg.pocok.biz
-        MAILGUN_SENDER: ${BRANCH_NAME}@mg.pocok.biz
+        MAILGUN_SENDER: ${STAGE}@mg.pocok.biz
         EMAIL_RECIPIENT: mate.donka@apexlab.io
         MAILGUN_API_KEY: ${{ secrets.PROD_MAILGUN_API_KEY }}
         TYPLESS_TOKEN: ${{ secrets.PROD_TYPLESS_TOKEN }}
@@ -46,5 +51,5 @@ jobs:
     - name: Comment
       uses: thollander/actions-comment-pull-request@v1
       with:
-        message: 'Deployed to ${BRANCH_NAME}.pocok.biz'
+        message: 'Deployed to ${STAGE}.pocok.biz'
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
