--- a/.github/workflows/create_pr_env.yml
+++ b/.github/workflows/create_pr_env.yml
@@ -2,10 +2,13 @@ name: Create PR Env
 
 on:
   pull_request:
-    types: [reopened, opened, synchronize, edited]
+    types: [labeled, opened, synchronize]
 
 jobs:
   deploy:
+    if: |
+      (github.event.action == 'labeled' && github.event.label.name == ':rocket: deploy') ||
+      (github.event.action != 'labeled' && contains(github.event.pull_request.labels.*.name, ':rocket: deploy'))
     name: Deploy
     runs-on: ubuntu-latest
     steps:
