--- a/.github/workflows/create_pr_env.yml
+++ b/.github/workflows/create_pr_env.yml
@@ -15,8 +15,12 @@ jobs:
     - name: Inject slug variables
       uses: rlespinasse/github-slug-action@v4
 
-    - name: Set STAGE variable in environment for next steps
-      run: echo "STAGE=pr-${{ github.event.number }}-${{ env.GITHUB_HEAD_REF_SLUG }}" >> $GITHUB_ENV
+    - name: Set envs
+      run: |
+        echo "STAGE=pr-${{ github.event.number }}-${{ env.GITHUB_HEAD_REF_SLUG }}" >> $GITHUB_ENV
+        echo "DOMAIN_NAME=${{STAGE}}.pocok.biz" >> $GITHUB_ENV
+        echo "API_URL=https://${{DOMAIN_NAME}}" >> $GITHUB_ENV
+        echo "MAILGUN_SENDER=${{STAGE}}@mg.pocok.biz" >> $GITHUB_ENV
 
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -41,10 +45,10 @@ jobs:
     - name: Deploy stack
       run: yarn sst deploy --stage ${STAGE}
       env:
-        DOMAIN_NAME: ${{STAGE}}.pocok.biz
-        API_URL: https://${{STAGE}}.pocok.biz
+        DOMAIN_NAME: ${{DOMAIN_NAME}}
+        API_URL: ${{API_URL}}
         MAILGUN_DOMAIN: mg.pocok.biz
-        MAILGUN_SENDER: ${{STAGE}}@mg.pocok.biz
+        MAILGUN_SENDER: ${{MAILGUN_SENDER}}
         EMAIL_RECIPIENT: mate.donka@apexlab.io
         MAILGUN_API_KEY: ${{ secrets.PROD_MAILGUN_API_KEY }}
         TYPLESS_TOKEN: ${{ secrets.PROD_TYPLESS_TOKEN }}
@@ -54,5 +58,5 @@ jobs:
     - name: Comment
       uses: thollander/actions-comment-pull-request@v1
       with:
-        message: 'Deployed to ${STAGE}.pocok.biz'
+        message: 'Deployed to ${{STAGE}}.pocok.biz'
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
