--- a/.github/workflows/create_pr_env.yml
+++ b/.github/workflows/create_pr_env.yml
@@ -41,12 +41,12 @@ jobs:
       run: yarn
 
     - name: Deploy stack
-      run: yarn sst deploy --stage ${STAGE}
+      run: yarn sst deploy --stage ${{ env.STAGE }}
       env:
-        DOMAIN_NAME: ${{ DOMAIN_NAME }}
-        API_URL: ${{ API_URL }}
+        DOMAIN_NAME: ${{ env.DOMAIN_NAME }}
+        API_URL: ${{ env.API_URL }}
         MAILGUN_DOMAIN: mg.pocok.biz
-        MAILGUN_SENDER: ${{ MAILGUN_SENDER }}
+        MAILGUN_SENDER: ${{ env.MAILGUN_SENDER }}
         EMAIL_RECIPIENT: mate.donka@apexlab.io
         MAILGUN_API_KEY: ${{ secrets.PROD_MAILGUN_API_KEY }}
         TYPLESS_TOKEN: ${{ secrets.PROD_TYPLESS_TOKEN }}
@@ -56,5 +56,5 @@ jobs:
     - name: Comment
       uses: thollander/actions-comment-pull-request@v1
       with:
-        message: 'Deployed to ${{STAGE}}.pocok.biz'
+        message: 'Deployed to ${{ env.STAGE }}.pocok.biz'
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
