--- a/.github/workflows/create_pr_env.yml
+++ b/.github/workflows/create_pr_env.yml
@@ -3,12 +3,6 @@ name: Create PR Env
 on:
   pull_request:
     types: [labeled, opened, synchronize]
-  workflow_dispatch:
-    inputs:
-      emailRecipient:
-        description: 'The email address to send the reports to'     
-        default: 'zoliendrodi@apexlab.io'
-        required: false
 
 jobs:
   deploy:
@@ -24,6 +18,7 @@ jobs:
     - run: echo "STAGE=pr-${{ github.event.number }}-${{ env.GITHUB_HEAD_REF_SLUG }}" >> $GITHUB_ENV
     - run: echo "DOMAIN_NAME=${{ env.STAGE }}.pocok.biz" >> $GITHUB_ENV
     - run: echo "API_URL=https://${{ env.DOMAIN_NAME }}" >> $GITHUB_ENV
+    - run: echo "EMAIL_RECIPIENT=${{ github.actor }}@users.noreply.github.com" >> $GITHUB_ENV
 
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -52,7 +47,7 @@ jobs:
         API_URL: ${{ env.API_URL }}
         MAILGUN_DOMAIN: mg.pocok.biz
         MAILGUN_SENDER: apex@mg.pocok.biz
-        EMAIL_RECIPIENT: ${{ github.event.inputs.emailRecipient }}
+        EMAIL_RECIPIENT: ${{ env.EMAIL_RECIPIENT }}
         MAILGUN_API_KEY: ${{ secrets.PROD_MAILGUN_API_KEY }}
         TYPLESS_TOKEN: ${{ secrets.PROD_TYPLESS_TOKEN }}
         TYPLESS_DOC_TYPE: ${{ secrets.PROD_TYPLESS_DOC_TYPE }}
@@ -61,5 +56,5 @@ jobs:
     - name: Comment
       uses: thollander/actions-comment-pull-request@v1
       with:
-        message: 'Deployed to ${{ env.API_URL }}'
+        message: '🚀 Deployed to ${{ env.API_URL }}'
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
