POCOK-81 - PR env (#45)
* chore: pr env

* fix: make branch lowercase

* add more pr action types

* fix: stage name

* fix: stage

* fix: destroy

* deploy on label

* fix: envs

* fix: envs

* fix: envs

* fix: comment

* email recipient from input

* dynamic email address

* email recipient from secret

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -32,11 +32,12 @@ jobs:
     - name: Deploy stack
       run: yarn sst deploy --stage production
       env:
+        DOMAIN_NAME: api.pocok.biz
+        API_URL: https://api.pocok.biz
         MAILGUN_DOMAIN: mg.pocok.biz
         MAILGUN_SENDER: apex@mg.pocok.biz
         EMAIL_RECIPIENT: ${{ secrets.PROD_EMAIL_RECIPIENT }}
         MAILGUN_API_KEY: ${{ secrets.PROD_MAILGUN_API_KEY }}
-        API_URL: ${{ secrets.PROD_API_URL }}
         TYPLESS_TOKEN: ${{ secrets.PROD_TYPLESS_TOKEN }}
         TYPLESS_DOC_TYPE: ${{ secrets.PROD_TYPLESS_DOC_TYPE }}
         PROCESS_INVOICE_LAMBDA_TIMEOUT_SEC: 30
