chore: .env keys

--- a/.env
+++ b/.env
@@ -10,3 +10,8 @@ JWT_KEY=
 TYPLESS_TOKEN=
 TYPLESS_DOC_TYPE=
 PROCESS_INVOICE_LAMBDA_TIMEOUT_SEC=30
+DEMO_TOKEN=
+WISE_API_TOKEN=
+SLACK_WEBHOOK_URL=
+SLACK_CHANNEL=
+SLACK_USERNAME=
